--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,22 @@
 
 <body>
 
+  <header>
+    <h3 id="hello">
+      Hello!
+    </h3>
+  </header>
+
   <nav class="nav-meny">
-    <a href="/" data-link class="nav-link">Home</a>
-    <a href="/about" data-link class="nav-link">About me</a>
-    <a href="/contact" data-link class="nav-link">Contact me</a>
+    <a href="/" data-link class="nav-link">About me</a>
+    <a href="/projects" data-link class="nav-link">My projects</a>
   </nav>
 
-
-
+  <div id="linkLogos">
+    <a href="https://github.com/xfekke" target="_blank">
+      <img src="./image/github.png" alt="Github-link">
+    </a>
+  </div>
   <main id="app"></main>
   <script type="module" src="./main.js"></script>
 
