--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,33 @@
   <header>
     <h3 id="hello">
       Hello!
+      <br>
+      - I'm Sebastian
+      <br>
+      Welcome to my page!
     </h3>
   </header>
 
-  <nav class="nav-meny">
+  <nav id="nav-meny">
     <a href="/" data-link class="nav-link">About me</a>
     <a href="/projects" data-link class="nav-link">My projects</a>
   </nav>
 
   <div id="linkLogos">
+
     <a href="https://github.com/xfekke" target="_blank">
       <img src="./image/github.png" alt="Github-link">
     </a>
+
+    <a href="https://www.linkedin.com/in/sebastian-sernald-49b543287/" target="_blank">
+      <img src="./image/linkedIn.png" alt="linkedIn-link">
+    </a>
+
+    <a href="mailto:sebastiansernald98@gmail.com">
+      <img src="./image/email.png" alt="Email-link">
+    </a>
+
+
   </div>
   <main id="app"></main>
   <script type="module" src="./main.js"></script>
