--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./public/css/style.css">
 
 </head>
 
 <body>
 
   <header>
-    <h3 id="hello">
-      Hello!
-      <br>
-      - I'm Sebastian
-      <br>
-      Welcome to my page!
-    </h3>
+    <img src="./public/image/avatar.png" alt="avatar" class="avatar">
+    <div class="text-container">
+      <h3 id="hello">
+        Hello!
+        <br>
+        - I'm Sebastian
+        <br>
+        Welcome to my page!
+      </h3>
+    </div>
   </header>
+
 
   <nav id="nav-meny">
     <a href="/" data-link class="nav-link">About me</a>
@@ -30,21 +34,21 @@
   <div id="linkLogos">
 
     <a href="https://github.com/xfekke" target="_blank">
-      <img src="./image/github.png" alt="Github-link">
+      <img src="./public/image/github.png" alt="Github-link">
     </a>
 
     <a href="https://www.linkedin.com/in/sebastian-sernald-49b543287/" target="_blank">
-      <img src="./image/linkedIn.png" alt="linkedIn-link">
+      <img src="./public/image/linkedIn.png" alt="linkedIn-link">
     </a>
 
     <a href="mailto:sebastiansernald98@gmail.com">
-      <img src="./image/email.png" alt="Email-link">
+      <img src="./public/image/email.png" alt="Email-link">
     </a>
 
 
   </div>
   <main id="app"></main>
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./public/main.js"></script>
 
 </body>
 
