--- a/index.html
+++ b/index.html
@@ -18,35 +18,21 @@
       <h3 id="hello">
         Hello!
         <br>
-        - I'm Sebastian
+        &nbsp;&nbsp;&nbsp;- I'm Sebastian
         <br>
-        Welcome to my page!
+        &nbsp;Welcome to my page!
       </h3>
     </div>
   </header>
 
-
-  <nav id="nav-meny">
-    <a href="/" data-link class="nav-link">About me</a>
-    <a href="/projects" data-link class="nav-link">My projects</a>
-  </nav>
-
-  <div id="linkLogos">
-
-    <a href="https://github.com/xfekke" target="_blank">
-      <img src="./public/image/github.png" alt="Github-link">
-    </a>
-
-    <a href="https://www.linkedin.com/in/sebastian-sernald-49b543287/" target="_blank">
-      <img src="./public/image/linkedIn.png" alt="linkedIn-link">
-    </a>
-
-    <a href="mailto:sebastiansernald98@gmail.com">
-      <img src="./public/image/email.png" alt="Email-link">
-    </a>
-
-
+  <div id="aboutSPA">
+    <nav id="nav-meny">
+      <a href="/" data-link class="nav-link">About me</a>
+      <a href="/projects" data-link class="nav-link">My projects</a>
+    </nav>
   </div>
+
+
   <main id="app"></main>
   <script type="module" src="./public/main.js"></script>
 
