--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <img src="./public/image/github.png" alt="GitHub" class="profile-icon">
         </a>
         <a href="https://www.linkedin.com/in/sebastian-sernald-49b543287/" target="_blank">
-          <img src="./public/image/linkedin.png" alt="LinkedIn" class="profile-icon">
+          <img src="./public/image/linkedin.png" alt="Linkedin" class="profile-icon">
         </a>
       </div>
     </div>
