Added Images to be included in Github pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
       </div>
     </div>
   </footer>
-  
+  <img src="./public/image/gherkinbdd.png"  style="display: none;">
+  <img src="./public/image/avatar.png"  style="display: none;">
+  <img src="./public/image/postmansc.png" style="display: none;">
+
   
   
   
