Further attempt at fixing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./public/css/style.css">
 </head>
 
+
 <body>
 
   <header>
@@ -23,7 +24,10 @@
       </nav>
     </div>
   </header>
-  
+          
+  <img src="./public/image/gherkinbdd.png" alt="temp gherkinbdd" class="hidden-image">
+  <img src="./public/image/avatar.png" alt="temp avatar" class="hidden-image">
+  <img src="./public/image/postmansc.png" alt="temp postmansc" class="hidden-image">
 
   <main id="app"></main>
   <script type="module" src="./public/main.js"></script>
@@ -43,10 +47,7 @@
         <a href="https://www.linkedin.com/in/sebastian-sernald-49b543287/" target="_blank">
           <img src="./public/image/linkedin.png" alt="Linkedin" class="profile-icon">
         </a>
-        
-        <img src="./public/image/gherkinbdd.png"  style="display: none;">
-        <img src="./public/image/avatar.png"  style="display: none;">
-        <img src="./public/image/postmansc.png" style="display: none;">
+
       </div>
     </div>
   </footer>
