--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="/" data-link class="nav-link">Home</a>
         <a href="/resume" data-link class="nav-link">Resume</a>
         <a href="/projects" data-link class="nav-link">My Projects</a>
+        <a href="/hobbies" data-link class="nav-link">Hobbies</a>
       </nav>
     </div>
   </header>
